--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="main_pie.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 
